[gd_scene load_steps=13 format=2]

[ext_resource path="res://Characters/Human/male/HOLDING/body/down/arms.png" type="Texture" id=1]
[ext_resource path="res://Characters/Human/male/IDLE/assets/down/head_attribute/hair.png" type="Texture" id=2]
[ext_resource path="res://Characters/Human/male/IDLE/assets/down/pants/pants.png" type="Texture" id=3]
[ext_resource path="res://Characters/Human/male/HOLDING/assets/down/shirt.png" type="Texture" id=4]
[ext_resource path="res://Characters/Human/male/IDLE/assets/down/shoes/shoes.png" type="Texture" id=5]
[ext_resource path="res://World/Player/PlayerTemplate/PlayerTemplate.gd" type="Script" id=6]
[ext_resource path="res://Characters/Human/male/IDLE/body/down/body.png" type="Texture" id=7]

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.00011
height = 7.99978

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "movement"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HeadAtr:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pants:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shirts:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shoes:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "swing"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Arms:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Accessory:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HeadAtr:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pants:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shirts:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shoes:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("ToolEquipped:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 46, 14 )
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0

[node name="PlayerTemplate" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2( 0, 9.91821e-05 )
rotation = -1.5708
shape = SubResource( 11 )

[node name="CompositeSprites" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="Body" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 7 )
hframes = 4

[node name="Arms" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 4

[node name="Pants" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
hframes = 4

[node name="HeadAtr" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 2 )
hframes = 4

[node name="Shirts" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 4 )
hframes = 4

[node name="Accessory" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
hframes = 4

[node name="Shoes" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
texture = ExtResource( 5 )
hframes = 4

[node name="ToolEquipped" type="Sprite" parent="CompositeSprites"]
position = Vector2( 0, -16 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="CompositeSprites"]
anims/RESET = SubResource( 3 )
anims/movement = SubResource( 4 )
anims/swing = SubResource( 7 )

[node name="MessageBubble" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -70.0
margin_top = -89.0
margin_right = 70.0
margin_bottom = -59.0
grow_horizontal = 2
grow_vertical = 0
rect_scale = Vector2( 0.7, 0.7 )
rect_pivot_offset = Vector2( 70, 0 )
custom_styles/normal = SubResource( 12 )
text = "hello"
align = 1
autowrap = true

[node name="Username" type="Label" parent="."]
margin_left = -31.0
margin_right = 31.0
margin_bottom = 28.0
grow_horizontal = 2
rect_scale = Vector2( 1, 0.9 )
text = "chhuse"
align = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
